<resources>
    <string name="app_name">ComPlanSchool</string>

    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    //Yang sering digunakan
    <string name="txt_name">Nama</string>
    <string name="txt_major">Jurusan</string>
    <string name="txt_school_code">Kode Sekolah</string>
    <string name="txt_send">Kirim</string>
    <string name="txt_desc">Isi Laporan</string>
    <string name="txt_email">Alamat Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_register">Daftar</string>
    <string name="txt_login">Masuk</string>
    <string name="txt_sign_out">Keluar</string>
    <string name="txt_or">atau</string>
    <string name="txt_category">Jenis Pel</string>
    <string name="txt_form_warning">Mohon jangan berikan laporan palsu!</string>

    //Untuk Hint pada textfield
    <string name="txt_hint_name">Nama Anda</string>
    <string name="txt_hint_major">Jurusan Anda</string>
    <string name="txt_hint_school_code">Kode Sekolah</string>
    <string name="txt_hint_email">1234@mail.com</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_hint_confirm_password">Confirm Password</string>
    <string name="txt_hint_name_facility">Keran Air</string>
    <string name="txt_hint_location_facility">Gerbang masuk sekolah</string>
    <string name="txt_hint_desc">Isi deskripsi disini</string>

    //Untuk Activity Input Profile
    <string name="aip_title">Lengkapi Profil Anda</string>
    <string name="aip_subtitle">Masukan semua field dengan benar dan jelas</string>

    //Untuk Activity Laporan Fasilitas
    <string name="alf_title">Laporan Fasilitas</string>
    <string name="alf_facility_name">Nama Fasilitas</string>
    <string name="alf_facility_location">Lokasi Fasilitas</string>

    //Untuk Activity Laporan Person
    <string name="alp_title">Laporan Pelanggar</string>
    <string name="alp_person_name">Nama Pelanggar</string>
    <string name="alp_person_category">Jenis Pelanggaran</string>

    //Untuk Activity Login
    <string name="al_title">Selamat Datang!</string>
    <string name="al_subtitle">Sebelum lanjut masuk terlebih dahulu</string>

    //Untuk Activity Register
    <string name="ar_title">Daftar Pengguna baru</string>
    <string name="ar_subtitle">Harap ingat alamat email dan password anda</string>

    //Untuk Fragment History
    <string name="fh_title">Riwayat Laporan</string>
    <string name="fh_subtitle">Semua jenis laporan yang telah anda kirim</string>
    <string name="tab_person">Pelanggaran</string>
    <string name="tab_facility">Fasilitas</string>

    //Untuk Fragment Home
    <string name="fho_title">Hai!, Silahkan pilih menu dibawah</string>
    <string name="fho_subtitle">harap pertimbangkan segala laporan yang ada</string>
    <string name="tv_school_name">TV_Nama_Sekolah</string>
    <string name="tv_location">TV_Lokasi_Sekolah</string>

    //Untuk Fragment Profile
    <string name="tv_name">TV_Name</string>
    <string name="tv_major">TV_Major</string>
    <string name="tv_code_school">TV_Code_School</string>

    //Untuk ImageView
    <string name="desc_fh_img1">Image Untuk Profile</string>
    <string name="desc_alf_img1">Image Untuk Button Image</string>
    <string name="desc_alf_img2">Image Untuk Button Back</string>
    <string name="desc_alp_img1">Image Untuk Button Back</string>
    <string name="desc_fho_img1">Image Untuk Button Image</string>
    <string name="desc_fho_img2">Image Untuk Button Menu 1</string>
    <string name="desc_fho_img3">Image Untuk Button Menu 2</string>

    //Untuk Item History
    <string name="ih_name">TV_Name</string>
    <string name="ih_category">TV_Kategori</string>
    <string name="ih_time">TV_Tanggal</string>

    //Untuk Custom View
    <string name="cv_btn_google">Dengan Google</string>

    //Detail Laporan Fasilitas
    <string name="txt_facilityname_detail">Facility Name</string>
    <string name="txt_facilitylocation_detail">Facility Location</string>
    <string name="txt_timestamp_detail">Laporan timestamp</string>
    <string name="btn_read_detail">Tinjau</string>
    <string name="btn_unrelevant_detail">Tidak Relevan</string>
    <string name="txt_description_detail">Description</string>

    //Detail Laporan Person
    <string name="txt_personname_detailperson">Person Name</string>
    <string name="txt_category_detailperson">category</string>
    <string name="txt_timestamp_detailperson">Laporan Person Timestamp</string>
    <string name="btn_read_detailperson">Tinjau</string>
    <string name="btn_unrelevant_detailperson">Tidak Relevan</string>
    <string name="txt_description_detailperson">Description</string>

    //Input School Profile
    <string name="title_jabatan_schoolprofile">Jabatan</string>
    <string name="field_jabatan_schoolprofile">Jabatan Anda</string>
    <string name="title_kepsek_schoolprofile">Nama Kepala Sekolah</string>
    <string name="title_schoolprofile">Lengkapi profil sekolah</string>
    <string name="title_domisi_schoolprofile">Domisi Sekolah</string>
    <string name="field_domisili_schoolprofile">Domisili Sekolah</string>
    <string name="title_namasekolah_schoolprofile">Nama Sekolah</string>
    <string name="field_namasekolah_schoolprofile">Nama Sekolah</string>
    <string name="field_kepsek_schoolprofile">Nama Kepala Sekolah</string>

    //Input user profile
    <string name="title_jabatan_userprofile">Jabatan</string>
    <string name="field_jabatan_userprofile">Jabatan Anda</string>
    <string name="title_userprofile">Lengkapi profil anda</string>

    //Select Code
    <string name="btn_confirm_selectcode">Confirm</string>
    <string name="btn_buatsekolahbaru_selectcode">Buat Sekolah Baru</string>
    <string name="title_selectcode">Masukan Kode Sekolah</string>
    <string name="txt_atau_selectcode">atau</string>

    //Notification
    <string name="title_jabatan_notification">Jabatan</string>
    <string name="title_kodesekolah_notification">Kode Sekolah</string>
    <string name="title_kepsek_notification">Kepala Sekolah</string>
    <string name="title_domisili_notification">Domisili</string>
    <string name="title_namasekolah_notification">Nama Sekolah</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_toolbar_detaillaporanfasilitas">Detail Laporan Fasilitas</string>
    <string name="title_toolbar_detaillaporanperson">Detail Laporan Oknum</string>
    <string name="title_statuslaporan">Status Laporan</string>
    <string name="txt_nav_status">Status</string>
    <string name="txt_nav_profil">Profil</string>


    <string name="allp_title">Riwayat Laporan Oknum</string>
    <string name="allf_title">Riwayat Laporan Fasilitas</string>
</resources>